--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="SimpleFolds/simpleVertex.svg">Simple Vertex</a></li>
                             <li><a href="#" class="demo" data-url="SimpleFolds/russianTuck.svg">Russian Tuck</a></li>
-                            <li><a href="#" class="demo" data-url="SimpleFolds/mapFold.svg">Map Fold</a></li>
-                            <li><a href="#" class="demo" data-url="SimpleFolds/brochureFold.svg">Brochure Fold</a></li>
+                            <li><a href="#" class="demo" data-url="SimpleFolds/mapfold.svg">Map Fold</a></li>
+                            <li><a href="#" class="demo" data-url="SimpleFolds/brochurefold.svg">Brochure Fold</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
