moving tstuff around

--- a/index.html
+++ b/index.html
@@ -879,6 +879,7 @@
                         <li>Mountain folds are <span style="color:red">red</span> - rgb(255, 0, 0), hex #ff0000</li>
                         <li>Valley folds are <span style="color:blue">blue</span> - rgb(0, 0, 255), hex #0000ff</li>
                         <li>Outline edges are <span style="color:black">black</span> - rgb(0, 0, 0), hex #000000</li>
+                        <li>Hinges (undriven creases) are <span style="color:black">black</span> - rgb(0, 0, 0), hex #000000</li>
                     </ul>
                     <img src="assets/examplepattern.jpg"/>
                     <ul>
