--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
                     <br/>
                     <b>Importing SVG:</b><br/><br/>
                     <ul>
-                        <li>The SVG importer supports path objects and line objects (coming).  Please convert polygons to paths before importing.</li>
+                        <li>The SVG importer supports path, line, rect, polygon, and polyline objects</li>
                         <li>Mountain folds are <span style="color:red">red</span> - rgb(255, 0, 0), hex #ff0000</li>
                         <li>Valley folds are <span style="color:blue">blue</span> - rgb(0, 0, 255), hex #0000ff</li>
                         <li>Outline edges are <span style="color:black">black</span> - rgb(0, 0, 0), hex #000000</li>
@@ -906,7 +906,6 @@
                         <li>Create geometry using the <b>Line Segment Tool</b>.</li>
                         <li>Illustrator can help you select all lines of a particular type so that you can edit their color or opacity together.  Click the line,
                         then go to <b>Select>Same>Appearance</b> to select all similar lines in the pattern.
-                        <li>To turn lines and polygons into path objects, select the geometry then right click and select <b>Make Compound Path</b>.</li>
                         <li>Finally hit <b>Save As</b> and select <b>.svg</b> extension. I'm using the default SVG 1.1 settings, but version 1.0 will work as well.</li>
                     </ul>
                 </p>
