--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,9 @@
     <div class="modal-dialog sm">
         <div class="modal-content">
             <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
                 <p id="warningMessage">
                 </p>
             </div>
@@ -1228,7 +1231,6 @@
                 <p><b>BACKGROUND COLOR</b><br/><br/>
                     Color (rgb hex) : &nbsp;&nbsp;<input id="backgroundColor" value="" placeholder="" class="hexVal form-control" type="text">
                 </p>
-            </div>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
