--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Origami<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Origami/flappingBird.svg">Flapping Bird</a></li>
                             <li><a href="#" class="demo" data-url="Origami/randlettflappingbird.svg">Randlett Flapping Bird</a></li>
                             <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
                             <li><a href="#" class="demo" data-url="Origami/singlesquaretwist.svg">Square Twist (single)</a></li>
@@ -600,6 +601,16 @@
                         <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Bases<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Bases/birdBase.svg">Bird Base</a></li>
+                            <li><a href="#" class="demo" data-url="Bases/frogBase.svg">Frog Base</a></li>
+                            <li><a href="#" class="demo" data-url="Bases/boatBase.svg">Boat Base</a></li>
+                            <li><a href="#" class="demo" data-url="Bases/squareBase.svg">Square Base</a></li>
+                            <li><a href="#" class="demo" data-url="Bases/waterbombBase.svg">Waterbomb Base</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
