--- a/index.html
+++ b/index.html
@@ -609,6 +609,8 @@
                             <li><a href="#" class="demo" data-url="Bases/birdBase.svg">Bird Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/frogBase.svg">Frog Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/boatBase.svg">Boat Base</a></li>
+                            <li><a href="#" class="demo" data-url="Bases/pinwheelBase.svg">Pinwheel Base</a></li>
+                            <li><a href="#" class="demo" data-url="Bases/openSinkBase.svg">Open Sink Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/squareBase.svg">Square Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/waterbombBase.svg">Waterbomb Base</a></li>
                         </ul>
