--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
-                        <a tabindex="-1">Bases<span class="pull-right fui-arrow-right"></span></a>
+                        <a tabindex="-1">Origami Bases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Bases/birdBase.svg">Bird Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/frogBase.svg">Frog Base</a></li>
