--- a/index.html
+++ b/index.html
@@ -572,6 +572,9 @@
                             <li><a href="#" class="demo" data-url="Origami/flappingBird.svg">Flapping Bird</a></li>
                             <li><a href="#" class="demo" data-url="Origami/randlettflappingbird.svg">Randlett Flapping Bird</a></li>
                             <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/langCardinal.svg">Lang Cardinal</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/langKniDragon.svg">Lang Orchid</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/langOrchid.svg">Lang KNL Dragon</a></li>
                             <li><a href="#" class="demo" data-url="Origami/singlesquaretwist.svg">Square Twist (single)</a></li>
                             <li><a href="#" class="demo" data-url="Origami/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
                         </ul>
