--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
-                        <a tabindex="-1">View Angle<span class="pull-right fui-arrow-right"></span></a>
+                        <a tabindex="-1">View Direction<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" id="cameraZ">View Front</a></li>
                             <li><a href="#" id="cameraMinusZ">View Back</a></li>
