--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Origami/flappingBird.svg">Flapping Bird</a></li>
                             <li><a href="#" class="demo" data-url="Origami/randlettflappingbird.svg">Randlett Flapping Bird</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/traditionalCrane.svg">Crane</a></li>
                             <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
                             <li><a href="#" class="demo" data-url="Origami/langCardinal.svg">Lang Cardinal</a></li>
                             <li><a href="#" class="demo" data-url="Origami/langKniDragon.svg">Lang Orchid</a></li>
