--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
-                        <a tabindex="-1">Tesselations<span class="pull-right fui-arrow-right"></span></a>
+                        <a tabindex="-1">Tessellations<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
