basic fold working

--- a/index.html
+++ b/index.html
@@ -845,6 +845,11 @@
                         <input id="passiveEdgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                         Undriven Edges <span id="numPassive"></span>
                     </label>
+                    <label class="checkbox" for="boundaryEdgesVisible">
+                        <input id="boundaryEdgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                        Boundary Edges <span id="numBoundary"></span>
+                    </label>
+
                 </div>
                 <br/>
             </div>
