--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
             <!--<div class="form-group">-->
               <!--<div class="input-group">-->
                 <div class="sliderInput floatRight" id="creasePercentNav">
-                    <span class="label-slider">Fold Angle : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                    <span class="label-slider">Fold Percent : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                     <!--<input value="" placeholder="" class="form-control" type="text">-->
                 </div>
               <!--</div>-->
@@ -702,7 +702,7 @@
 <canvas id="gpuMathCanvas"></canvas>
 <div id="controls">
     <div class="sliderInput floatRight" id="creasePercent">
-        <span class="label-slider">Fold Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <span class="label-slider">Fold Percent : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="float form-control" type="text">
     </div><br/><br/>
     <div id="simButtons" class="alignRight">
@@ -895,8 +895,8 @@
                 </p><br/>
                     <b>Instructions:</b><br/><br/>
                     <ul>
-                        <li>Slide the <b>Fold Angle</b> slider to control the degree of folding of the pattern (1 is fully folded, 0 is unfolded,
-                            and -1 is fully folded with the opposite mountain/valley assignments).</li>
+                        <li>Slide the <b>Fold Percent</b> slider to control the degree of folding of the pattern (100% is fully folded, 0% is unfolded,
+                            and -100% is fully folded with the opposite mountain/valley assignments).</li>
                         <li>Drag to rotate the model, scroll to zoom.</li>
                         <li>Import other patterns under the <b>Examples</b> menu.</li>
                         <li>Upload your own crease patterns in SVG or FOLD formats, following <a href="#" class="goToImportInstructions">these instructions</a>.</li>
@@ -1010,7 +1010,7 @@
                 If the simulation looks choppy, consider lowering the <b>Num simulation steps per render</b> setting under <b>Animation Settings</b> in the right hand menu.
                 <br/><br/>
                     VR mode currently does not support all the UI of the regular app, so you will need someone in the "outside world" to
-                    help you load new files, change the fold angle, etc.
+                    help you load new files, change the fold percent, etc.
                 </p>
             </div>
         </div><!-- /.modal-content -->
