--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
                             <li><a href="#" class="demo" data-url="Origami/traditionalCrane.svg">Crane</a></li>
                             <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
                             <li><a href="#" class="demo" data-url="Origami/langCardinal.svg">Lang Cardinal</a></li>
-                            <li><a href="#" class="demo" data-url="Origami/langKniDragon.svg">Lang Orchid</a></li>
-                            <li><a href="#" class="demo" data-url="Origami/langOrchid.svg">Lang KNL Dragon</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/langOrchid.svg">Lang Orchid</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/langKnlDragon.svg">Lang KNL Dragon</a></li>
                             <li><a href="#" class="demo" data-url="Origami/singlesquaretwist.svg">Square Twist (single)</a></li>
                             <li><a href="#" class="demo" data-url="Origami/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
                         </ul>
@@ -623,7 +623,7 @@
                         <a tabindex="-1">Simple Folds<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="SimpleFolds/simpleVertex.svg">Simple Vertex</a></li>
-                            <li><a href="#" class="demo" data-url="SimpleFolds/russianTuck.svg">Russian Tuck</a></li>
+                            <li><a href="#" class="demo" data-url="SimpleFolds/russianTriangle.svg">Russian Triangle</a></li>
                             <li><a href="#" class="demo" data-url="SimpleFolds/mapfold.svg">Map Fold</a></li>
                             <li><a href="#" class="demo" data-url="SimpleFolds/brochurefold.svg">Brochure Fold</a></li>
                         </ul>
