--- a/index.html
+++ b/index.html
@@ -598,7 +598,6 @@
                             <li><a href="#" class="demo" data-url="Tessellations/langHoneycomb.svg">Lang Honeycomb Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/langOvalTessellation.svg">Lang Oval Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/langHyperbolicLimit.svg">Lang Hyperbolic Limit</a></li>
-							<li><a href="#" class="demo" data-url="Tessellations/test.svg">test (REMOVE)</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
@@ -607,6 +606,16 @@
                             <li><a href="#" class="demo" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Maze Foldings<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Squaremaze/helloworld.svg">Square Maze "hello world"</a></li>
+                            <li><a href="#" class="demo" data-url="Squaremaze/origamisimulator.svg">Square Maze "origami simulator"</a></li>
+                            <li><a href="#" class="demo" data-url="Squaremaze/cross.svg">Square Maze "+"</a></li>
+                            <!--<li class="divider"></li>-->
+                        </ul>
+                    </li>
+                    <li class="divider"></li>
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Origami Bases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
