--- a/index.html
+++ b/index.html
@@ -1330,5 +1330,14 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+<div class="modal fade" id="noSupportModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-body">
+                This app uses GPU functions which are not supported by this device, please try again on desktop.<br/><br/>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
