--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@
                             <li><a href="#" class="demo" data-url="Tessellations/reschBarbell.svg">Resch Barbell Tessellation</a></li>
                             <li class="divider"></li>
                             <li><a href="#" class="demo" data-url="Tessellations/langHoneycomb.svg">Lang Honeycomb Tessellation</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/langWedgeDoubleFaced.svg">Lang Wedged Double Faced Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/langOvalTessellation.svg">Lang Oval Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/langHyperbolicLimit.svg">Lang Hyperbolic Limit</a></li>
                         </ul>
@@ -645,12 +646,6 @@
                                 <a tabindex="-1">Skinny Triangles<span class="pull-right fui-arrow-right"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#" class="demo" data-url="Tessellations/langRattanWeave.svg">Lang Rattan Weave</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a tabindex="-1">Bad Files<span class="pull-right fui-arrow-right"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#" class="demo" data-url="Tessellations/langWedgeDoubleFaced.svg">Lang Wedged Double Faced Tessellation</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -712,7 +707,7 @@
 <div id="controls">
     <div class="sliderInput floatRight" id="creasePercent">
         <span class="label-slider">Fold Percent : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
-        <input value="" placeholder="" class="float form-control" type="text">
+        <input value="" placeholder="" class="float form-control" type="text">&nbsp;&nbsp;%
     </div><br/><br/>
     <div id="simButtons" class="alignRight">
         <a href="#" id="start" class="paddingBottom btn btn-lg btn-success">Start Simulation</a>
