fold save working

--- a/index.html
+++ b/index.html
@@ -1119,8 +1119,8 @@
                     Save with triangulated faces
                 </label>
                 <label class="bigLabel checkbox" for="exportFoldAngle">
-                    <input id="exportFoldAngle" data-toggle="checkbox" disabled class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                    Save with vertices_foldAngles (coming soon)
+                    <input id="exportFoldAngle" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                    Save with vertices_foldAngles
                 </label>
                 <span class="smallTxt">For more information about the FOLD file format, see the <a target="_blank" href="https://github.com/edemaine/fold">offical docs</a></span>.
             </div>
