--- a/index.html
+++ b/index.html
@@ -1363,7 +1363,7 @@
         </div>
         <div id="langTreemaker">
             Designed by <a href="http://www.langorigami.com/" target="_blank">Robert Lang</a> using <a href="http://www.langorigami.com/article/treemaker" target="_blank">Treemaker</a>.  More info
-            about the Treemaker software can be found in the <a href="http://www.langorigami.com/files/articles/TreeMkr40.pdf" target="_blank">Treemaker Manual</a> or in the book
+            about Lang's Treemaker software can be found in the <a href="http://www.langorigami.com/files/articles/TreeMkr40.pdf" target="_blank">Treemaker Manual</a> or in the book
             <a href="http://www.langorigami.com/publication/origami-design-secrets-2nd-edition" target="_blank">Origami Design Secrets</a>.  All original
             crease patterns can be found on <a href="http://www.langorigami.com/crease-patterns" target="_blank">Lang's website</a>.
         </div>
