--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                         <a tabindex="-1">Origami Bases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Bases/birdBase.svg">Bird Base</a></li>
-                            <li><a href="#" class="demo" data-url="Bases/frogBase.svg">Frog Base</a></li>
+                            <li><a href="#" class="demo author" data-author="moveSlowly" data-url="Bases/frogBase.svg">Frog Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/boatBase.svg">Boat Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/pinwheelBase.svg">Pinwheel Base</a></li>
                             <li><a href="#" class="demo" data-url="Bases/openSinkBase.svg">Open Sink Base</a></li>
@@ -1366,6 +1366,9 @@
             about Lang's Treemaker software can be found in the <a href="http://www.langorigami.com/files/articles/TreeMkr40.pdf" target="_blank">Treemaker Manual</a> or in the book
             <a href="http://www.langorigami.com/publication/origami-design-secrets-2nd-edition" target="_blank">Origami Design Secrets</a>.  All original
             crease patterns can be found on <a href="http://www.langorigami.com/crease-patterns" target="_blank">Lang's website</a>.
+        </div>
+        <div id="moveSlowly">
+            Move <b>Fold Percent</b> slowly for this pattern to fold correctly!
         </div>
     </div>
 </div>
